// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component Should be able to check the label size when component is active 1`] = `
.c0 {
  position: relative;
  width: auto;
  height: 48px;
}

.c0 input {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-left: .8rem;
  padding-right: 2.8rem;
  border: 2px solid #004282;
  border-radius: 4px;
  font-size: inherit;
  font-family: inherit;
  color: #2B2C32;
  outline: none;
  background: none;
}

.c0 input border-color:#2B52DD   label {
  position: absolute;
  left: 1rem;
  top: 35%;
  padding: 0 .5rem;
  margin-left: -.5rem;
  color: #999EA7;
  cursor: text;
  -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
  transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
  top: -.5rem;
  font-size: .8rem;
  left: .8rem;
  background-color: #FFF;
  color: #2B52DD;
}

.c0 input svg {
  position: absolute;
  right: -2.9rem;
  top: .9rem;
  cursor: pointer;
}

<div
  className="c0"
/>
`;

exports[`Input Component Should be able to match a snapshot 1`] = `
.c0 {
  position: relative;
  width: auto;
  height: 48px;
}

.c0 input {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-left: .8rem;
  padding-right: 2.8rem;
  border: 2px solid #004282;
  border-radius: 4px;
  font-size: inherit;
  font-family: inherit;
  color: #2B2C32;
  outline: none;
  background: none;
}

.c0 input border-color:#2B52DD   label {
  position: absolute;
  left: 1rem;
  top: 35%;
  padding: 0 .5rem;
  margin-left: -.5rem;
  color: #999EA7;
  cursor: text;
  -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
  transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
  top: -.5rem;
  font-size: .8rem;
  left: .8rem;
  background-color: #FFF;
  color: #2B52DD;
}

.c0 input svg {
  position: absolute;
  right: -2.9rem;
  top: .9rem;
  cursor: pointer;
}

<div
  class="c0"
/>
`;

exports[`Input Component Should be able to match a snapshot with false parameter 1`] = `
.c0 {
  position: relative;
  width: auto;
  height: 48px;
}

.c0 input {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-left: .8rem;
  padding-right: 2.8rem;
  border: 2px solid #004282;
  border-radius: 4px;
  font-size: inherit;
  font-family: inherit;
  color: #2B2C32;
  outline: none;
  background: none;
}

.c0 input label {
  position: absolute;
  left: 1rem;
  top: 35%;
  padding: 0 .5rem;
  margin-left: -.5rem;
  color: #999EA7;
  cursor: text;
  -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
  transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
}

.c0 input svg {
  position: absolute;
  right: -2.9rem;
  top: .9rem;
  cursor: pointer;
}

<div
  class="c0"
/>
`;

exports[`Input Component Should be able to match a snapshot with true parameter 1`] = `
.c0 {
  position: relative;
  width: auto;
  height: 48px;
}

.c0 input {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  padding-left: .8rem;
  padding-right: 2.8rem;
  border: 2px solid #004282;
  border-radius: 4px;
  font-size: inherit;
  font-family: inherit;
  color: #2B2C32;
  outline: none;
  background: none;
  border-color: #E73A33;
  color: #E73A33;
}

.c0 input label {
  position: absolute;
  left: 1rem;
  top: 35%;
  padding: 0 .5rem;
  margin-left: -.5rem;
  color: #999EA7;
  cursor: text;
  -webkit-transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
  transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
  top: -.5rem;
  font-size: .8rem;
  left: .8rem;
  background-color: #FFF;
  color: #2B52DD;
  color: #E73A33;
}

.c0 input svg {
  position: absolute;
  right: -2.9rem;
  top: .9rem;
  cursor: pointer;
}

<div
  class="c0"
/>
`;
